--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yunyi Zhang (张云逸)"
-  avatar           : "profile.png"
+  avatar           : "yunyi-zhang.jpeg"
   bio              : "Ph.D. Student @ UIUC"
   location         : "Urbana, IL"
   employer         :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : #"replacethistwitterhandle"
+  twitter          : "YunyiZhang10"
   vine             :
   weibo            :
   xing             :
