--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yunyi Zhang"
 title_separator          : "-"
 name                     : &name "Yunyi Zhang"
-description              : &description "Ph.D. Student @ UIUC"
+description              : &description "Ph.D. Candidate @ UIUC"
 url                      : https://yzhan238.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yzhan238/yzhan238.github.io"
