--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yunyi Zhang"
 title_separator          : "-"
 name                     : &name "Yunyi Zhang"
-description              : &description "Ph.D. Candidate @ UIUC"
+description              : &description "Applied Scientist @ AWS"
 url                      : https://yzhan238.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yzhan238/yzhan238.github.io"
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Yunyi Zhang (张云逸)"
   avatar           : "yunyi-zhang.jpeg"
-  bio              : "Ph.D. Student @ UIUC"
-  location         : "Urbana, IL"
+  bio              : "Applied Scientist @ AWS"
+  location         : "New York City, NY"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=5VMnkl0AAAAJ&hl=en"
-  email            : "yzhan238@illinois.edu"
+  email            : 
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
